--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "rewrites": [
     { "source": "/((?!api/).*)", "destination": "/index.html" }
-  ]
+  ],
+  "functions": {
+    "api/ai.ts": {
+      "runtime": "nodejs20.x",
+      "maxDuration": 30
+    }
+  }
 }
